fix ugly white space in background

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   color: #373b64;
-  height: 100%;
 }
 .glass {
   background: hsla(0, 0%, 100%, 0.4);
